# cookiecutter-cpp-module

./: README.md  config_file.yaml  cookiecutter.json
hooks/: post_gen_project.py
{{ cookiecutter.project_name }}/: CMakeLists.txt
{{ cookiecutter.project_name }}/include/: {{cookiecutter.class_filename}}.h
{{ cookiecutter.project_name }}/src/: main.cpp  {{cookiecutter.class_filename}}.cpp
